--- a/public/stylesheets/e3e.less
+++ b/public/stylesheets/e3e.less
@@ -72,26 +72,26 @@ a {color: gray; text-decoration: none;}
 a:hover {color: black; text-decoration: undeline;}
 p {margin: 0.4em 0;}
 .help {margin: 1em 0; background-color: @medio; padding: 1em;
-    -moz-border-radius: 0.3em; -webkit-border-radius: 0.3em;}
+       -moz-border-radius: 0.3em; -webkit-border-radius: 0.3em;}
 
 #top {width: 100%; position: fixed; left: 0; top: 0; z-index: 3000;}
 #bar {width: 100%; overflow: hidden; height: 10px;}
 #header {width: 900px; margin: auto; color: white; }
 #header h1 {float: left; width: 89px; height: 35px; margin-top: 15px; }
 #header h2 {float: left; margin-top: 34px;  font-variant: small-caps; margin-left: 3px;
-    font-size: 15px; letter-spacing: 0.05em; font-family: Verdana}
+            font-size: 15px; letter-spacing: 0.05em; font-family: Verdana}
 
 #logo {float: left; margin-right: 2em; margin-bottom: 1em;}
 
 #page {width: 900px; margin: 0em auto 5em auto; background-color: white; padding: 70px 1em 0 1em;
-    border: 0px solid @border;
-    min-height:500px;
-    height:auto !important;
-    height:500px;
+       border: 0px solid @border;
+       min-height:500px;
+       height:auto !important;
+       height:500px;
 }
 
 .bottom {width: 100%; margin-top: 2em; text-align: center; font-size: 90%; color: @gris; padding: 1em 0;
-    background-color: #252525; border-top: 2em solid @border; clear: both;
+         background-color: #252525; border-top: 2em solid @border; clear: both;
 }
 .bottom a:hover {color: white;}
 
@@ -102,43 +102,43 @@ p {margin: 0.4em 0;}
 #head p {font-variant: small-caps; margin-top: -1em; }
 
 #navigation { font-family: "Lucida-Grande","Verdana",sans-serif;
-        width: 900px; margin: 0 auto; overflow: hidden; background-color: white; padding: 0 1em 1em 1em;}
+              width: 900px; margin: 0 auto; overflow: hidden; background-color: white; padding: 0 1em 1em 1em;}
 #navigation .sections {float: left; }
 #navigation  a, #navigation span {display: block; float: left; margin-right: 0.5em;
-    padding: 0.5em 1em 0.5em 1em; font-size: 110%;
-    background-image: url(../images/cellshade.png); background-repeat: repeat-x; background-position: 0 0px;
-    .tab-borders; color: black;}
+                                  padding: 0.5em 1em 0.5em 1em; font-size: 110%;
+                                  background-image: url(../images/cellshade.png); background-repeat: repeat-x; background-position: 0 0px;
+                                  .tab-borders; color: black;}
 #navigation span {color: white; background-image: none;}
 #navigation a:hover {background-position: 0px -4px; }
 
 #navigation .session {float: right;  margin-right: -1em;}
 #navigation .session a {padding: 0.3em; color: white; margin-top: 0.2em;
-    background-color: @border; .round;
-    background-image: none;}
+                        background-color: @border; .round;
+                        background-image: none;}
 #navigation .session a:hover {background: @border;}
 
 .content {padding: 1em 2em;}
 
 .flash_notice {background-color: #9F9F9F; font-size: 120%;
-    color: white; width: 100%; margin: 0 auto; padding: 5px 2px; text-align: center;
-    -moz-border-radius: 0.2em; -webkit-border-radius: 0.2em; }
+               color: white; width: 100%; margin: 0 auto; padding: 5px 2px; text-align: center;
+               -moz-border-radius: 0.2em; -webkit-border-radius: 0.2em; }
 
 .col3 {float: left; width: 30%; margin: 2em 3% 2em 0;}
 .col3 h2 {margin-left: 8px;}
 .col3 h1 {margin-left: 8px; font-size: 180%; font-style: normal;}
 .col3 img { background-color: @medio; width: 250px;height: 150px; margin-bottom: 1em;
-    border: 8px solid @border;  .round; }
+            border: 8px solid @border;  .round; }
 .col3 p {margin-left: 8px;}
 p.about {font-size: 120%; font-style: italic; line-height: 1.5em;}
 
 .divided {width: 100%; overflow: hidden; margin: 2em 0;}
 .divided form {float: left; width: 45%;
-    background-color: @fondo; border: 1px solid @border; padding: 1em;}
+               background-color: @fondo; border: 1px solid @border; padding: 1em;}
 #new_user_session { margin-right: 2%;}
 
 .divided input[type=text], .divided input[type=password]
 {border-style: solid; border-width: 1px; width: 220px;
-        border-color: #D4D4D4 #EBEBEB #EBEBEB #D4D4D4;}
+ border-color: #D4D4D4 #EBEBEB #EBEBEB #D4D4D4;}
 .dialog .fieldWithErrors input, .divided .fieldWithErrors input {
     border-color: #c00;
 }
@@ -160,9 +160,9 @@ form span.fieldWithErrors input {border-color: #c00;}
 
 form p.info {margin: 1em 0 0.5em 8em; color: gray; font-style: italic;}
 form p.save {background-color: @fondo; padding: 0.5em 2em; margin: 1em 6em 1em 6em; width: auto;
-    -moz-border-radius: 1em; -webkit-border-radius: 1em;}
+             -moz-border-radius: 1em; -webkit-border-radius: 1em;}
 form label {float: left; display: block; width: 6em; text-align: right; padding-top: 0.2em;
-    margin-right: 0.5em; margin-left: 2.5em; color: @darkgris;}
+            margin-right: 0.5em; margin-left: 2.5em; color: @darkgris;}
 form p.error_message {color: #c00; margin-left: 9em; margin-bottom: 1em;}
 form p.error {background-color: #FFBFBF; padding: 5px 0; text-align: center; .round;}
 form a {display: block; float: left; margin: 2em 0 0 9em;}
@@ -182,8 +182,13 @@ form table td {padding: 0.2em 1em; text-align: center;}
 form table td.name {text-align: right; padding-right: 0.5em; width: 12em;}
 
 /* INVOICES */
-#chart_panel {margin: 1em 0; border: 1em solid @medio; .round;}
+#chart_panel {margin: 1em 0; border: 1em solid @fondo; .round;}
 #chart {width: 100%; margin: 0; border: 0; padding: 0;}
+.chart_controls {width: 100%; overflow: hidden; margin-left: 4em; margin-top: 0.5em;}
+.chart_controls a {display: block; float: left; padding: 0.1em 0.4em; font-size: 2em;
+  background-color: @fondo; color: white; margin-right: 0.5em; font-weight: bolder;}
+
+
 table.dataset {margin-left: auto; margin-right: auto;}
 table.dataset td {padding-left: 0; padding-right: 0.2em;}
 table.dataset input {width: 4em; margin-left: 0; margin-right: 0;}
@@ -192,7 +197,7 @@ table.dataset span {margin-left: 0; margin-right: 1em; color: gray;}
 
 .chartfields {width: 100%; overflow: hidden; margin: -10px 0 10px 40px;}
 .chartfields input { font-size: 80%; border: 1px solid @medio; padding: 1px;
-    width: 27px; float: left; margin-left: 4.5px; margin-right: 3px;}
+                     width: 27px; float: left; margin-left: 4.5px; margin-right: 3px;}
 
 /* USERS */
 table.users { margin: 1em; }
@@ -200,3 +205,5 @@ table.users thead {background-color: gray; color: white;}
 table.users td {padding: 0.2em 1em;}
 
 .calc {font-family: monospace; letter-spacing: 0.5em; font-size: 1.3em;}
+
+
