--- a/public/stylesheets/e3e.less
+++ b/public/stylesheets/e3e.less
@@ -142,7 +142,7 @@ p.about {font-size: 120%; font-style: italic; line-height: 1.5em;}
 .dialog .fieldWithErrors input, .divided .fieldWithErrors input {
     border-color: #c00;
 }
-.dialog {width: 70%; margin: 3em auto; }
+.dialog {width: 70%; margin: 5em auto 15em auto; }
 .dialog form {    background-color: @fondo; border: 1px solid @border; padding: 1em;}
 
 .divided p.info, .dialog p.info {margin-left: 1em;}
