--- a/app/views/invoices/_edit.html.erb
+++ b/app/views/invoices/_edit.html.erb
@@ -1,5 +1,9 @@
 
 <% content_for :header do %>
+  <!-- CANVAS PARA IE -->
+  <!--[if IE]><script type="text/javascript" src="/javascripts/excanvas.compiled.js"></script><![endif]-->
+
+
   <script type="text/javascript">
     (function($) {
       $(function() {
@@ -28,6 +32,7 @@
         });
 
         $("#dataset").bind("submit", function() {
+          $(this).find("input[type=submit]").val("Guardando...").attr("disabled", true);
           $.jGrowl("Guardando los datos. Espere un momento, por favor.", {closer:false});
         });
         
@@ -63,7 +68,7 @@
   <% end %>
   <p>
     <%= submit_tag t(:submit) %>
-    <a name="guardar" />
+    <a name="guardar"></a>
   </p>
 <% end %>
 
