--- a/public/stylesheets/e3e.css
+++ b/public/stylesheets/e3e.css
@@ -44,12 +44,32 @@ input, textarea, select {
 input, textarea, select { *font-size: 100%; }
 legend { color: #000000; }
 del, ins { text-decoration: none; }
+* { margin: 0; }
+html, body { height: 100%; }
+.wrapper {
+  min-height: 100%;
+  height: auto !important;
+  height: 100%;
+  margin: 0 auto -5em;
+}
+.footer, .push { height: 5em; }
+.footer { background-color: #252525; }
+.bottom {
+  text-align: center;
+  font-size: 90%;
+  padding-top: 1em;
+  color: #868686;
+  border-top: 2em solid #e2e2dd;
+}
+.bottom a:hover { color: white; }
 html {
   font-size: 80%;
-  background-color: #efefea;
   color: black;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  height: 100%;
+  background-color: #efefea;
 }
+body { height: 100%; }
 .no-round {
   -moz-border-radius: 0.5em;
   -webkit-border-radius: 0.5em;
@@ -61,7 +81,6 @@ html {
   -webkit-border-bottom-right-radius: 2px;
   -ms-border-radius: 2px;
 }
-.dada { behavior: url(/stylesheets/border-radius.htc); }
 .aboutcontroller { background-color: #548c65; }
 .surveyscontroller { background-color: #5cbb7a; }
 .gascontroller { background-color: #33cfab; }
@@ -161,18 +180,6 @@ p { margin: 0.4em 0; }
   height: auto !important;
   height: 500px;
 }
-.bottom {
-  width: 100%;
-  margin-top: 2em;
-  text-align: center;
-  font-size: 90%;
-  color: #868686;
-  padding: 1em 0;
-  background-color: #252525;
-  border-top: 2em solid #e2e2dd;
-  clear: both;
-}
-.bottom a:hover { color: white; }
 #head {
   width: 100%;
   overflow: hidden;
@@ -308,7 +315,7 @@ p.about {
 .divided .fieldWithErrors input { border-color: #cc0000; }
 .dialog {
   width: 70%;
-  margin: 5em auto 15em auto;
+  margin: 5em auto 5em auto;
 }
 .dialog form {
   background-color: #efefea;
