--- a/public/stylesheets/e3e.less
+++ b/public/stylesheets/e3e.less
@@ -160,6 +160,7 @@ form p.error {background-color: #FFBFBF; padding: 5px 0; text-align: center; .ro
 form a {display: block; float: left; margin: 2em 0 0 9em;}
 form .disabled {-moz-opacity: 0.5;}
 form .disabled span {color: gray;}
+form p input[type=submit] {margin-left: 9em;}
 
 .errorExplanation {margin-left: 2em;}
 .errorExplanation h2 {font-size: 100%; margin-left: 0; color: #c00;}
