--- a/app/views/invoices/_edit.html.erb
+++ b/app/views/invoices/_edit.html.erb
@@ -1,7 +1,7 @@
 
 <% content_for :header do %>
   <!-- CANVAS PARA IE -->
-  <!--[if IE]><script type="text/javascript" src="/javascripts/excanvas.compiled.js"></script><![endif]-->
+  <!--[if IE]><script type="text/javascript" src="/javascripts/excanvas.trunk.js"></script><![endif]-->
 
 
   <script type="text/javascript">
