--- a/app/views/surveys/edit.html.erb
+++ b/app/views/surveys/edit.html.erb
@@ -43,8 +43,7 @@
 <h1><%=  t(:title) %></h1>
 <p class="about">Los datos de esta encuesta nos permitirán saber las características energéticas
   de su vivienda y sus hábitos de consumo.</p>
-<p class="about">Le rogamos nos conteste a estos datos aunque sea de forma aproximada y
-  por favor, pulse el botón <a href="#guardar">Guardar</a>  cuando complete el cuestionario. Gracias.</p>
+<p class="about">Le rogamos nos conteste a estos datos aunque sea de forma aproximada.</p>
 
 
 <div id="javascript">
@@ -88,7 +87,7 @@
     <br/>
     <p>
       <%= f.submit 'Guardar' %>
-      <a name="guardar" />
+      <a name="guardar"></a>
     </p>
   <% end %>
 </div>
