--- a/public/stylesheets/e3e.less
+++ b/public/stylesheets/e3e.less
@@ -78,6 +78,7 @@ body {height: 100%;}
 
 .container {width: 100%; overflow: hidden;}
 
+h1, h2, h3, h4 {display: block;}
 h1, h2 {color: @gris;}
 h1 {font-size: 260%; font-weight: bold; letter-spacing: -0.05em;}
 h2 {font-size: 150%;}
