--- a/public/stylesheets/e3e.css
+++ b/public/stylesheets/e3e.css
@@ -91,6 +91,7 @@ body { height: 100%; }
   width: 100%;
   overflow: hidden;
 }
+h1, h2, h3, h4 { display: block; }
 h1, h2 { color: #868686; }
 h1 {
   font-size: 260%;
