--- a/app/views/layouts/e3e.html.erb
+++ b/app/views/layouts/e3e.html.erb
@@ -1,4 +1,6 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<?xml version="1.0" encoding="utf-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
   <head>
     <title>E3E - <%= yield(:title) || 'E3E' %></title>
@@ -28,7 +30,7 @@
         <div id="navigation">
           <div class="sections">
             <%= section t(:about), root_path, :AboutController %>
-            <%= section t(:survey), survey_path, :SurveysController %>
+            <%= section t(:survey), user_survey_path, :UserSurveysController %>
             <%= section t(:gas), gas_path, :GasController %>
             <%= section t(:elec), electricidad_path, :ElectricidadController %>
             <%= section t(:report), report_path, :ReportsController %>
@@ -39,9 +41,6 @@
               <%= link_to t('users.profile'), edit_user_path(current_user) %>
               <%= link_to t(:user_session_close), logout_path, :method => 'delete' %>
             <% end -%>
-            <% if current_admin %>
-              <%= link_to t(:admin_zone), current_admin %>
-            <% end %>
           </div>
         </div>
       </div>
