--- a/public/stylesheets/e3e.less
+++ b/public/stylesheets/e3e.less
@@ -174,7 +174,7 @@ form p span.fake_field {
     display: block; margin-left: 9em; width: 15em; color: gray;
     border: 1px solid white; padding: 2px; }
 form span {margin-left: 0.2em;}
-
+form p.checkbox {padding-left: 9em;}
 form span.fieldWithErrors input {border-color: #c00;}
 
 form p.info {margin: 1em 0 0.5em 8em; color: gray; font-style: italic;}
