--- a/public/stylesheets/e3e.less
+++ b/public/stylesheets/e3e.less
@@ -13,18 +13,24 @@ html{color:#000;background:#FFF;}body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pr
 @medio: #efefea;
 @error: #c00;
 
-@color1: #548C65;
-@color2: #5CBB7A;
-@color3: #33CFAB;
-@color4: #00FFB4;
-@color5: #468F9B;
+@color1: #A5C941;
+@color2: #A9014B;
+@color3: #FC9200;
+@color4: #2DAEBF;
+@color5: #0c0;
+
+@gcolor1: #548C65;
+@gcolor2: #5CBB7A;
+@gcolor3: #33CFAB;
+@gcolor4: #00FFB4;
+@gcolor5: #468F9B;
+
 
 @acolor1: #490A3D;
 @acolor2: #BD1550;
 @acolor3: #E97F02;
 @acolor4: #F8CA00;
 @acolor5: #8A9B0F;
-
 * {
     margin: 0;
 }
