--- a/public/stylesheets/e3e.less
+++ b/public/stylesheets/e3e.less
@@ -13,11 +13,18 @@ html{color:#000;background:#FFF;}body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pr
 @medio: #efefea;
 @error: #c00;
 
-@color1: #A5C941;
-@color2: #A9014B;
-@color3: #FC9200;
-@color4: #2DAEBF;
-@color5: #0c0;
+@color5: #4064d9;
+@color4: #964ce0;
+@color3: #c30059;
+@color2: #faa609;
+@color1: #9dc215;
+
+
+@ocolor1: #A5C941;
+@ocolor2: #A9014B;
+@ocolor3: #FC9200;
+@ocolor4: #2DAEBF;
+@ocolor5: #0c0;
 
 @gcolor1: #548C65;
 @gcolor2: #5CBB7A;
