--- a/app/views/about/welcome.html.erb
+++ b/app/views/about/welcome.html.erb
@@ -1,29 +1,41 @@
 <h1>Qué es E3E</h1>
 
-<p class="about">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus hendrerit mollis lectus ut vulputate. Sed et velit in lorem fermentum porta et nec arcu. Fusce aliquet orci urna. Nullam at quam turpis, eu iaculis magna. Donec ac ligula orci. Fusce fermentum sagittis libero sed dignissim. Quisque eros nisi, hendrerit non posuere elementum, euismod sed nibh. Etiam sit amet aliquam mauris. Nam ac semper mi. In in metus lorem.</p>
+<p class="about">
+  E3E es una iniciativa del Instituto Eduardo Torroja de Ciencias de la Construcción en coordianción con XXXXX que pretende ayudar a la reducción de emisiones de gas de efecto invernadero a través de la rehabilitación energética de los edificios. Para ello, mediante una encuesta y las facturas energéticas, esta web detecta las actuaciones de rehabilitación con mayor impacto sobre su vivienda. Después de introducir los datos sobre su vivienda y sobre su consumo el sistema la compara con los datos de la base de datos y es capaz de situar su vivienda dentro del gasto nacional.
+  Así mismo el sistema le indica que subvenciones pueden serle concedidas y a que organismo dirigirse.
+</p>
 <div class="col3">
   <h2>Paso 1:</h2>
   <h1>Encuesta</h1>
   <img src="/images/encuesta.png" alt="encuesta" />
-    <p>Aliquam auctor leo eu metus luctus bibendum. Mauris tincidunt, lorem eu convallis mattis, arcu urna hendrerit lorem, eu iaculis mauris nisi sodales arcu. Nulla eu mauris massa. Ut sed imperdiet enim. Nullam dictum ornare purus, pretium pretium sapien faucibus non. </p>
+  <p>
+    Para poder saber si su vivienda consume demasiado comparada con otras viviendas parecidas necesitamos conocerla un poco. Para ello complete la encuesta sobre su edificio que aparece en la segunda pestaña, paso 1: encuesta. Los datos son totalmente confidenciales porque esta web no registra ningún dato personal, nada de lo que indique en esta web podrá servir para identificarle.
+  </p>
 </div>
 <div class="col3">
   <h2>Pasos 2 y 3:</h2>
   <h1>Evolución del consumo</h1>
   <img src="/images/consumo.png" alt="evolución del consumo" />
-    <p>Aliquam auctor leo eu metus luctus bibendum. Mauris tincidunt, lorem eu convallis mattis, arcu urna hendrerit lorem, eu iaculis mauris nisi sodales arcu. Nulla eu mauris massa. Ut sed imperdiet enim. Nullam dictum ornare purus, pretium pretium sapien faucibus non. </p>
+  <p>
+    En la siguiente pestaña nos podrá indicar, si tiene gas natural, su factura mensualmente. Comparando su consumo de gas mensual con la climatología podremos determinar el nivel de aislamiento de su vivienda, siempre dentro de un orden, ya que los niveles de confort térmico son distintos para cada familia.
+    De la misma manera los datos del gasto eléctrico son necesarios en caso de que tenga aparatos de eléctricos de calefacción o aire acondicionado.
 </div>
 <div class="col3">
   <h2>Resultados:</h2>
   <h1>Guía de ahorro</h1>
   <img src="/images/empty.png" alt="guía de ahorro"/>
-    <p>Aliquam auctor leo eu metus luctus bibendum. Mauris tincidunt, lorem eu convallis mattis, arcu urna hendrerit lorem, eu iaculis mauris nisi sodales arcu. Nulla eu mauris massa. Ut sed imperdiet enim. Nullam dictum ornare purus, pretium pretium sapien faucibus non. </p>
+  <p>Aliquam auctor leo eu metus luctus bibendum. Mauris tincidunt, lorem eu convallis mattis, arcu urna hendrerit lorem, eu iaculis mauris nisi sodales arcu. Nulla eu mauris massa. Ut sed imperdiet enim. Nullam dictum ornare purus, pretium pretium sapien faucibus non. </p>
 </div>
 
-<br/>
-<h2>Para qué sirve</h2>
-<p class="about">Suspendisse vitae ligula leo. Fusce egestas, odio sit amet fermentum blandit, mauris erat malesuada magna, ac molestie mi sem sit amet nisl. Mauris malesuada ligula libero. Suspendisse ipsum nunc, lacinia sit amet lacinia ac, rutrum porta mi. Pellentesque auctor rhoncus vehicula. Duis dolor tellus, imperdiet in consequat sit amet, volutpat sed nisl. Nunc aliquam convallis ipsum, ultricies fermentum tortor pellentesque sed. Duis eleifend tempor nunc vitae ultricies. Nam in urna massa. Morbi condimentum pulvinar nisl id porttitor. Nam porta tempor elit nec eleifend. Donec tempor neque sit amet nisi blandit convallis. Vestibulum dictum accumsan nunc sit amet tincidunt. Aenean faucibus gravida tortor sit amet ultrices.</p>
+<br style="clear: both;" />
+<h2 >Para qué sirve</h2>
+<p class="about">
+  Conocidos algunos datos de su vivienda y su consumo el sistema e3e puede comparar estos con la climatología y determinar si su vivienda consume poco, normal o mucho en comparación con el parque de viviendas de su zona. Los resultados están basados en el proyecto CEREX del plan nacional.
+  Además, si la información que ha facilitado es fidedigna, conseguira identificar donde están los principales problemas energéticos de su vivienda y cómo puede solucionarlos. Sepa que muchas de las intervenciones destinadas a mejorar el comportamiento energético de su vivienda son objeto de subvenciones estatales gestionadas por las comunidades autónomas.
+</p>
 <br/>
 <h2>Quiénes somos</h2>
 
-<p class="about">Aliquam vehicula pulvinar elit et volutpat. Nunc ornare, mi vitae euismod egestas, felis tellus ornare quam, eu suscipit eros nisl ut dui. Morbi convallis, nunc eget hendrerit auctor, sem urna tincidunt ipsum, vitae vestibulum turpis elit et orci. Cras elementum, turpis at posuere vulputate, enim eros volutpat ante, sed ornare urna massa euismod sem. Aliquam elit arcu, mollis ac posuere vitae, porttitor vel libero. Vestibulum sit amet diam ut risus suscipit convallis id a velit. Donec mattis, felis non luctus sodales, nunc ligula rhoncus nisl, ut imperdiet lorem mi ut justo. Vivamus ac faucibus lorem. Mauris tempor lacus in erat cursus commodo. Integer vel arcu velit, quis tristique velit. Duis ac adipiscing nunc. Mauris pulvinar nunc eu neque sollicitudin aliquam.</p>
+<p class="about">
+  El Instituto Eduardo Torroja de Ciencias de la Construcción es un centro perteneciente al Consejo Superior de Investigaciones Científicas creado en 1947 con la unión del Insituto de la Construcción y la Edificación y el Instituto del Cemento. Desde entonces este centro viene realizando labores de investigación y asistencia científico-técnica en el ámbito de la construcción.
+  Dentro del proyecto wecex se han estudiado las tipologias y las soluciones construcctivas más comunes en el estado, obteniendo de estas un comportamiento tipo de las viviendas. Este análisis es en el que se basa esta web de conocimiento experto para situar la calidad energética de su vivienda dentro de la escala nacional.</p>
