--- a/app/views/about/welcome.html.erb
+++ b/app/views/about/welcome.html.erb
@@ -17,8 +17,8 @@
   <h1>Evolución del consumo</h1>
   <img src="/images/consumo.png" alt="evolución del consumo" />
   <p>
-    En la siguiente pestaña nos podrá indicar, si tiene gas natural, su factura mensualmente. Comparando su consumo de gas mensual con la climatología podremos determinar el nivel de aislamiento de su vivienda, siempre dentro de un orden, ya que los niveles de confort térmico son distintos para cada familia.
-    De la misma manera los datos del gasto eléctrico son necesarios en caso de que tenga aparatos de eléctricos de calefacción o aire acondicionado.
+  En la siguiente pestaña nos podrá indicar, si tiene gas natural, su factura mensualmente. Comparando su consumo de gas mensual con la climatología podremos determinar el nivel de aislamiento de su vivienda, siempre dentro de un orden, ya que los niveles de confort térmico son distintos para cada familia.
+  De la misma manera los datos del gasto eléctrico son necesarios en caso de que tenga aparatos de eléctricos de calefacción o aire acondicionado.
 </div>
 <div class="col3">
   <h2>Resultados:</h2>
@@ -38,4 +38,12 @@
 
 <p class="about">
   El Instituto Eduardo Torroja de Ciencias de la Construcción es un centro perteneciente al Consejo Superior de Investigaciones Científicas creado en 1947 con la unión del Insituto de la Construcción y la Edificación y el Instituto del Cemento. Desde entonces este centro viene realizando labores de investigación y asistencia científico-técnica en el ámbito de la construcción.
-  Dentro del proyecto wecex se han estudiado las tipologias y las soluciones construcctivas más comunes en el estado, obteniendo de estas un comportamiento tipo de las viviendas. Este análisis es en el que se basa esta web de conocimiento experto para situar la calidad energética de su vivienda dentro de la escala nacional.</p>
+  Dentro del proyecto wecex se han estudiado las tipologias y las soluciones construcctivas más comunes en el estado, obteniendo de estas un comportamiento tipo de las viviendas. Este análisis es en el que se basa esta web de conocimiento experto para situar la calidad energética de su vivienda dentro de la escala nacional.
+</p>
+
+<div id="partners">
+  <%= link_to image_tag('partners/ministerio de vivienda.jpg')  %>
+  <%= link_to image_tag('partners/torroja.png')  %>
+  <%= link_to image_tag('partners/aicia2.jpg')  %>
+  <%= link_to image_tag('partners/cerda.jpg')  %>
+</div>
