--- a/public/stylesheets/e3e.css
+++ b/public/stylesheets/e3e.css
@@ -492,3 +492,15 @@ table.users td { padding: 0.2em 1em; }
   letter-spacing: 0.5em;
   font-size: 1.3em;
 }
+#partners {
+  background-color: #e2e2dd;
+  margin: 2em -3em -1em -3em;
+  padding: 2em 4em;
+  text-align: center;
+}
+#partners img {
+  margin: 0 1em;
+  border: 1px solid #868686;
+  padding: 3px;
+  background-color: white;
+}
