--- a/public/stylesheets/e3e.less
+++ b/public/stylesheets/e3e.less
@@ -240,4 +240,6 @@ table.users td {padding: 0.2em 1em;}
 
 .calc {font-family: monospace; letter-spacing: 0.5em; font-size: 1.3em;}
 
-
+#partners {background-color: @border; margin: 2em -3em -1em -3em; padding: 2em 4em; 
+    text-align: center;}
+#partners img {margin: 0 1em; border: 1px solid @gris; padding: 3px; background-color: white;}
